# FinalHillelProject

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp
src/controller/: controller.cpp  controller.hpp
src/core/: core.cpp  core.hpp
src/core/coreImpl/: coreImpl.cpp  coreImpl.hpp
src/core/model/: model.hpp
src/dialog/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog.ui
src/dialog/view/: CMakeLists.txt  view.hpp
